# calendario-liturgico

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install_local.bat  install_local.sh  pyproject.toml
.github/workflows/: tests.yml
src/calendario_liturgico/: __init__.py  calculators.py  core.py  data.py  utils.py
tests/: test_calculators.py  test_core.py  test_utils.py
web/: app.py
web/templates/: index.html
