[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendario-liturgico"
version = "0.0.1.2"
description = "Python library for calculating Christian liturgical dates"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Etalab-2.0"}
authors = [
    {name = "Andres Felipe Echavarria Pelaez"}
]
keywords = [
    "calendar",
    "liturgical",
    "history",
    "easter",
    "julian",
    "gregorian",
    "historians",
    "christianity"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Religion",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]
web = [
    "flask>=3.0.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/andresecha/calendario-liturgico"
Repository = "https://github.com/andresecha/calendario-liturgico"
"Bug Tracker" = "https://github.com/andresecha/calendario-liturgico"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calendario_liturgico = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=calendario_liturgico --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
